--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,5 +1,5 @@
 .root {
-  font-family: Arial, sans-serif;
+  font-family: "Roboto", system-ui, sans-serif;
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
@@ -14,12 +14,7 @@
 
 /* Font details */
 :root {
-  --default-font:
-    "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
-    Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --heading-font: "Raleway", sans-serif;
-  --nav-font: "Lato", sans-serif;
+  --default-font: "Roboto", system-ui, sans-serif;
 }
 /* Global variables - Colors */
 :root {
