--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,18 +1,13 @@
 :root {
   font-family: sans-serif;
-  margin: 50px;
-  padding: 40px;
 }
 
 * {
   --primary-bg-color: #f1f5f9;
   --primary-color: #0ea5e9;
   --primary-hover-color: #41bdf7;
-}
-
-*,
-::after,
-::before {
+  margin: 0%;
+  padding: 0%;
   box-sizing: border-box;
 }
 
@@ -44,24 +39,24 @@ h6 {
   font-family: sans-serif;
 }
 
-.container {
+.hdrcontainer {
   display: flex;
   background-color: var(--primary-bg-color);
-  /* #e1f7fc;*/
   width: 100%;
+  height: auto;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 120px;
+  padding-left: 130px;
 }
 
-.container div {
-  margin: 0px;
-  padding: 10px;
+.hdrcontainer div {
   font-size: 20px;
 }
 
 .header {
-  /* color: #1b2430; */
   color: #475569;
   background-color: var(--primary-bg-color);
-  /* #e1f7fc;*/
   padding: 15px 0;
   transition: all 0.5s;
   z-index: 997;
@@ -72,22 +67,10 @@ h6 {
   text-decoration: none;
 }
 
-/* 
-@media (max-width: 1200px) {
-  .header .logo {
-    order: 1;
-  }
-
-  .header .btn-getstarted {
-    order: 2;
-    margin: 0 15px 0 0;
-    padding: 6px 20px;
-  }
-
-  .header .navmenu {
-    order: 3;
-  }
-} */
+.header .container h1,
+.header .container .navmenu {
+  padding: 0 0 0 135px;
+}
 
 /* Navigation Menu style - Desktops and large screens */
 /* @media (min-width: 1200px) { */
@@ -193,27 +176,67 @@ h6 {
   visibility: visible;
 }
 
-.btn-getstarted,
-.btn-getstarted:focus {
+.header .btn-getstarted,
+.header .btn-getstarted:focus {
   color: #ffffff;
   background: var(--primary-color);
   /* #0ea5e9; */
   font-size: 14px;
   padding: 10px 30px;
-  margin: 10px;
+  /* margin: 10px; */
   border-radius: 50px;
-  transition: 0.3s;
-  align-items: right;
+  /* transition: 0.3s; */
+  align-items: center;
 }
 
 .header .btn-getstarted:hover,
 .header .btn-getstarted:focus:hover {
   color: #ffffff;
-  /* background: #66bfe8; */
   background: var(--primary-hover-color);
+  /* box-shadow: 0 16px 40px rgba(0, 0, 0, 0.6) transparent 50%;
+  transform: translateY(-5px); */
+}
+
+/* Main container */
+
+.main {
+  /* display: flex; */
+  background-color: var(--primary-bg-color);
+  width: 100%;
+  height: auto;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 140px;
+  padding-left: 150px;
 }
 
 /* ============ Home section styling ================== */
+
+.home {
+  padding: 100px 0 60px 0;
+  position: static;
+  /* z-index: 1; */
+}
+
+.home .homecontainer {
+  display: flex;
+  background-color: var(--primary-bg-color);
+  width: 100%;
+  height: auto;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home .home-content {
+  /* display: inline-flex; */
+  /* width: 900px; */
+  width: 900px;
+  height: auto;
+  /* align-items: left; */
+  /* gap: 10px; */
+  margin-bottom: 24px;
+  /* z-index: 900; */
+}
 
 .home .home-content .home-subheading {
   display: inline-flex;
@@ -246,32 +269,52 @@ h6 {
   color: #1e293b;
 }
 
+.home .home-content .home-btns {
+  display: inline-flex;
+  gap: 20px;
+  /* margin-top: 20px; */
+}
+
+.home .home-content .home-btns .btn-watchvideo,
+.home .home-content .home-btns .btn-watchvideo:focus {
+  /* color: #ffffff; */
+  /* background: var(--primary-color); */
+  font-size: 14px;
+  font-weight: bold;
+  padding: 10px 30px;
+  margin: 20px;
+  /* border-radius: 50px; */
+  transition: 0.3s;
+  align-items: left;
+  /* transition: all 0.3s ease-in-out; */
+}
+
+/* 
+.home .home-content .home-btns .btn-watchvideo:hover,
+.home .home-content .home-btns .btn-watchvideo:focus:hover {
+  box-shadow: 0 16px 40px rgba(0, 0, 0, 0.6) transparent 50%;
+  transform: translateY(-03px);
+} */
+
 .home .home-content .home-btns .btn-explrServices,
 .home .home-content .home-btns .btn-explrServices:focus {
   color: #ffffff;
   background: var(--primary-color);
-  /* #0ea5e9; */
   font-size: 14px;
   font-weight: bold;
   padding: 10px 30px;
-  margin: 10px;
+  margin: 20px;
   border-radius: 50px;
   transition: 0.3s;
   align-items: right;
   /* transition: all 0.3s ease-in-out; */
 }
 
-.home .home-content .home-btns .btn-explrServices:hover,
-.home .home-content .home-btns .btn-explrServices:focus:hover {
-  box-shadow: 0 16px 40px rgba(0, 0, 0, 0.6) transparent 50%;
-  transform: translateY(-5px);
-}
-
 /* Home - Cards display (grid) */
 .home .home-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 24px;
+  gap: 10px;
   position: relative;
   z-index: 2;
 }
@@ -357,5 +400,23 @@ h6 {
   color: gray;
 }
 
+/* Service Section Styling */
+
+.serv-cards.btn-discovermore,
+.serv-cards .btn-discovermore:focus {
+  color: var(--primary-color);
+  background: #ffffff;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 10px 30px;
+  margin: 10px;
+  transition: 0.3s;
+  align-items: right;
+}
+
+.serv-cards .btn-discovermore:hover,
+.serv-cards .btn-discovermore:focus:hover {
+  color: var(--primary-hover-color);
+}
 
 /* } */
